# OpenKinematics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: articulated_fk_ik.py  planar_fk.py  planar_fk_ik.py  scara_fk_ik.py
open_kinematics/: api.py  exceptions.py
open_kinematics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
open_kinematics/math/: matrix_ops.py  transformations.py
open_kinematics/open_kinematics/math/: transformations.py
open_kinematics/open_kinematics/solvers/: dh_solver.py
open_kinematics/robots/: articulated.py  base_robot.py  planar.py  scara.py
open_kinematics/solvers/: base_solver.py  dh_solver.py  geometric_ik.py  jacobian_solver.py
open_kinematics/visualization/: plot_2d.py  plot_3d.py
tests/: test_api.py  test_articulated_robot.py  test_dh_fk.py  test_jacobian.py  test_planar_ik.py  test_planar_robot.py  test_plot_2d.py  test_plot_3d.py  test_pose_error.py  test_pseudoinverse_ik.py  test_scara_ik.py  test_scara_robot.py
