[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open_kinematics"
version = "0.1.0"
description = "A modular, educational robotics kinematics library."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["open_kinematics*"]